<resources>
    <string name="app_name">당일 장보기</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_address_search">AddressSearchActivity</string>
    <string name="locale_code">KR</string>
    <string name="monetary_unit">원</string>
    <string name="count_unit">회</string>
    <string name="ok">확인</string>
    <string name="amount">수량</string>
    <string name="cartfragment_title">장바구니</string>
    <string name="orderactivity_title">배달 요청</string>
    <string name="orderhistoryfragment_title">이전 주문 내역</string>
    <string name="authorizationdialogfragment_title">휴대폰 번호 인증</string>
    <string name="authorization_number_empty">인증번호를 입력해주세요.</string>
    <string name="authorization_dismatch">입력값이 틀립니다.</string>
    <string name="authorization_remain_count">남은 인증 횟수</string>
    <string name="authorization_success">휴대폰 번호가 인증되었습니다.</string>
    <string name="passwordfinddialogfragment_title">비밀번호 재설정</string>
    <string name="name_empty">이름을 입력해주세요.</string>
    <string name="email_empty">이메일을 입력해주세요.</string>
    <string name="passwordfind_success">비밀번호 재설정 메일이 전송되었습니다.</string>
    <string name="joinfragment_korean_error">올바른 한글 이름을 입력하세요.</string>
    <string name="joinfragment_form_error">형식에 맞지 않습니다.</string>
    <string name="joinfragment_password_error">영문+숫자 8~20자로 입력하세요.</string>
    <string name="joinfragment_password_input_message">영문,숫자조합으로 8~20자 이내로 입력하세요.</string>
    <string name="address_search_activity_result_ok">주소가 설정되었습니다.</string>
    <string name="joinfragment_terms_check">약관에 동의하셔야 합니다.</string>
    <string name="joinfragment_name_check">이름 입력 값을 확인하여 주십시오.</string>
    <string name="joinfragment_email_check">이메일 입력 값을 확인하여 주십시오.</string>
    <string name="joinfragment_phonenumber_check">휴대폰 번호 입력 값을 확인하여 주십시오.</string>
    <string name="joinfragment_phone_authorization_check">휴대폰 번호 인증을 받으셔야 합니다.</string>
    <string name="joinfragment_password_check">비밀번호 입력 값을 확인하여 주십시오.</string>
    <string name="accountinfofragment_title">계정</string>
    <string name="noticefragment_title">공지 사항</string>
    <string name="passwordchangeactivity_title">비밀번호 변경</string>
    <string name="termsfragment_title">약관 보기</string>
    <string name="tmap_api_key">52d5ad22-8316-3bf2-ad0b-854d6855bcee</string>
    <string name="productinfochangeactivity_title">정보 수정 요청</string>
    <string name="chart_description">단위 : 원</string>
    <string name="chart_data1_name">기본가격</string>
    <string name="chart_data2_name">카드적용</string>
    <string name="exit_message">한번 더 누르시면 앱이 종료됩니다.</string>
    <string name="supportfragment_title">고객 센터</string>
    <string name="supportmartpartnershipactivity_title">마트 제휴 문의</string>
    <string name="supportoneononeactivity_title">1:1 문의하기</string>
    <string name="position">위치</string>
    <string name="activity_mart_detail_time">영업시간</string>
    <string name="activity_mart_detail_restdays">휴무일</string>
    <string name="activity_mart_detail_phonenumber">전화번호</string>
    <string name="activity_mart_detail_deliveryarea">배달지역</string>
    <string name="name">성명</string>
    <string name="name_input">성명 입력</string>
    <string name="name_input_message">이름을 입력하세요.</string>
    <string name="address">주소</string>
    <string name="address_search_message">주소를 검색하세요.</string>
    <string name="address_search">주소 검색</string>
    <string name="other_address_message">나머지 주소를 입력하세요.</string>
    <string name="receive_phone">연락처</string>
    <string name="activity_order_phone_hint">받는 사람 연락처</string>
    <string name="goods_receive">물품 수령</string>
    <string name="goods_receive_home">집으로 배달</string>
    <string name="goods_receive_mart">마트에서 수령</string>
    <string name="sold_out_goods">품절 상품</string>
    <string name="sold_out_option_another">비슷한 가격\n타 상품 구입</string>
    <string name="sold_out_option_pass">품절 상품\n구입 안함</string>
    <string name="sold_out_option_call">전화 요청</string>
    <string name="request">요청 사항</string>
    <string name="request_example_message">예) 배달 출발 전 전화주세요.</string>
    <string name="payment_option">결제 방법</string>
    <string name="payment_option_card">카드</string>
    <string name="payment_option_money">현금</string>
    <string name="payment_option_cash_receipt">현금 영수증</string>
    <string name="pointcard_info">포인트\n카드 정보</string>
    <string name="pointcard_message">없으면 비워두세요.</string>
    <string name="order">주문</string>
    <string name="email">E-mail</string>
    <string name="current_password">현재\n비밀번호</string>
    <string name="change_password">변경할\n비밀번호</string>
    <string name="change_password_confirm">변경할\n비밀번호 확인</string>
    <string name="password_input">비밀번호 입력</string>
    <string name="password_confirm_input">비밀번호 확인</string>
    <string name="password_change_input">변경할 비밀번호</string>
    <string name="password_change_confirm_input">변경할 비밀번호 확인</string>
    <string name="password_change">비밀번호 변경</string>
    <string name="cause">사유</string>
    <string name="cause_1">상품이 마트에 없어요</string>
    <string name="cause_2">배달되지 않는 상품이에요</string>
    <string name="cause_3">상품이 할인되지 않아요</string>
    <string name="cause_4">상품의 이름이 달라요</string>
    <string name="cause_5">상품의 가격이 달라요</string>
    <string name="cause_6">상품의 단위가 달라요</string>
    <string name="cause_7">기타</string>
    <string name="activity_product_info_change_comment">위의 빈칸을 작성하여 제출하여 주시면 검토 후\n상품 정보에 반영하겠습니다. 감사합니다.</string>
    <string name="activity_product_info_change_submit">정보 수정 요청 제출</string>
    <string name="mart_name">마트명</string>
    <string name="person_in_charge">담당자</string>
    <string name="activity_support_mart_partnership_comment">위의 빈칸을 작성하여 제출하여 주시면 브로콜리카트의 매니저가 연락 후\n직접 방문하여 마트 제휴 내용을 설명하여 드립니다. 감사합니다.</string>
    <string name="activity_support_mart_partnership_submit">마트 제휴 문의 신청</string>
    <string name="ask_content">문의 내용</string>
    <string name="activity_support_oneonone_ask_comment">위의 빈칸을 작성하여 제출하여 주시면 검토 후 답변 드리겠습니다.\n감사합니다.</string>
    <string name="activity_support_oneonone_ask_submit">문의 내용 제출</string>
    <string name="email_address_input">이메일 입력</string>
    <string name="email_address_example">ex) abc@xxx.com</string>
    <string name="phone_input">전화번호 입력</string>
    <string name="phone_example">ex) 01012341234</string>
    <string name="password">비밀번호</string>
    <string name="info_modify_update">정보수정 업데이트</string>
    <string name="logout">로그 아웃</string>
    <string name="service_leave">서비스 탈퇴</string>
    <string name="fragment_authorization_dialog_comment">입력하신 휴대폰 번호로\n인증번호문자가 발송되었습니다.\n인증번호문자를 확인 후 입력해주세요.</string>
    <string name="authorization_number_input">인증 번호 입력</string>
    <string name="do_authorization">인증 하기</string>
    <string name="start_authorization">인증 받기</string>
    <string name="terms_agree">약관 동의</string>
    <string name="terms_see">약관보기</string>
    <string name="join_and_login">회원가입 및 로그인</string>
    <string name="already_member">이미 회원이신가요?</string>
    <string name="login">로그인</string>
    <string name="yet_member">아직 회원이 아니신가요?</string>
    <string name="join">회원가입</string>
    <string name="password_find">비밀번호 찾기</string>
    <string name="fragment_password_find_dialog_comment">계정의 비밀번호 재설정 메일을 받으시려면\n아래 항목을 입력해주세요.</string>
    <string name="fragment_password_find_fialog_submit">비밀번호 재설정 메일 전송</string>
    <string name="mart_info">마트정보</string>
    <string name="price_change">가격변동확인</string>
    <string name="info_modify_request">정보수정요청</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="put">담기</string>
    <string name="include_bottom_first_layout_comment">당장은 통신판매중개자이며 통신판매의 당사자가 아닙니다.\n따라서 당장은 상품 거래 정보 및 거래에 대하여 책임을 지지 않습니다.</string>
    <string name="delivery_time">배달 시간</string>
    <string name="goods_see">상품 보기</string>
    <string name="search">검색</string>
    <string-array name="top">
        <item>특가상품</item>
        <item>인기상품</item>
        <item>농산품</item>
        <item>축산품</item>
        <item>수산품</item>
        <item>가공식품</item>
        <item>냉장/냉동/간편/반찬</item>
        <item>유아</item>
        <item>생활</item>
        <item>애완동물</item>
    </string-array>
    <string-array name="special_popular">
        <item>농산품</item>
        <item>축산품</item>
        <item>수산품</item>
        <item>가공식품</item>
        <item>냉장/냉동/간편/반찬</item>
        <item>유아</item>
        <item>생활</item>
        <item>애완동물</item>
    </string-array>
    <string-array name="agricultural">
        <item>채소</item>
        <item>과일</item>
        <item>쌀</item>
        <item>잡곡</item>
        <item>두부</item>
        <item>건(견)과류</item>
        <item>기타</item>
    </string-array>
    <string-array name="livestock_production">
        <item>한우/소고기</item>
        <item>돼지고기</item>
        <item>닭/오리고기</item>
        <item>계란류</item>
        <item>기타</item>
    </string-array>
    <string-array name="aquatic_product">
        <item>생선</item>
        <item>해물</item>
        <item>생선회</item>
        <item>건어물</item>
        <item>기타</item>
    </string-array>
    <string-array name="processed_food">
        <item>생수/우유/두유</item>
        <item>유제품</item>
        <item>커피/차</item>
        <item>요리분말</item>
        <item>조미료/소스</item>
        <item>식용류/장류</item>
        <item>면류</item>
        <item>통조림</item>
        <item>과자/시리얼</item>
        <item>음료</item>
        <item>건강식품</item>
        <item>기타</item>
    </string-array>
    <string-array name="refrigeration_freeze_simple_side">
        <item>냉장식품(햄/어묵)</item>
        <item>냉동식품(만두/피자)</item>
        <item>즉석식품</item>
        <item>햇반</item>
        <item>김치</item>
        <item>베이커리/쨈</item>
        <item>기타</item>
    </string-array>
    <string-array name="baby">
        <item>분유/유아식</item>
        <item>기저귀/물티슈</item>
        <item>유아위생용품</item>
        <item>임부용품</item>
        <item>기타</item>
    </string-array>
    <string-array name="life">
        <item>생활용품</item>
        <item>샤워용품</item>
        <item>욕실용품</item>
        <item>주방용품</item>
        <item>일회용품</item>
        <item>기타</item>
    </string-array>
    <string-array name="pet">
        <item>개</item>
        <item>고양이</item>
        <item>기타</item>
    </string-array>
    <string-array name="product_sort">
        <item>상품 인기순</item>
        <item>높은 할인율순</item>
        <item>낮은 가격순</item>
        <item>높은 가격순</item>
    </string-array>
    <string-array name="example_time">
        <item>오전 10:00 ~ 오후 12:00</item>
        <item>오후 12:00 ~ 오후 02:00</item>
        <item>오후 02:00 ~ 오후 04:00</item>
        <item>오후 04:00 ~ 오후 06:00</item>
    </string-array>
</resources>