<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_productlist" android:icon="@android:drawable/ic_menu_camera"
            android:checked="true"
            android:title="@string/goods_see" />
        <item android:id="@+id/nav_orderhistory" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/orderhistoryfragment_title" />
        <item android:id="@+id/nav_account" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/accountinfofragment_title" />
        <item android:id="@+id/nav_notice" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/noticefragment_title" />
        <item android:id="@+id/nav_terms" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/termsfragment_title" />
        <item android:id="@+id/nav_support" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/supportfragment_title" />
    </group>

</menu>