<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_password_find_dialog_comment"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/f_passwordfind_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/name_input"
        app:met_singleLineEllipsis="true"
        android:hint="@string/name_input"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/f_passwordfind_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/email_address_input"
        app:met_singleLineEllipsis="true"
        android:hint="@string/email_address_input"/>
    <Button
        android:id="@+id/f_passwordfind_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_password_find_fialog_submit"/>
</LinearLayout>
