<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorEdgeLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:gravity="center_vertical"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/f_accountinfo_email_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorEdgeLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/f_accountinfo_name_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/name_input"
            android:background="@drawable/searchbox"
            android:text="홍길동"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/receive_phone"/>
        <EditText
            android:id="@+id/f_accountinfo_phone_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/phone_input"
            android:background="@drawable/searchbox"
            android:text="010-1234-1234"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/password"/>
        <Button
            android:id="@+id/f_accountinfo_passwordchange_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/roundedbox_g"
            android:textColor="@color/colorPrimary"
            android:text="@string/password_change"/>
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/f_accountinfo_infochange_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="0dp"
        android:layout_marginTop="12dp"
        android:focusable="true"
        android:clickable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/info_modify_update"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/f_accountinfo_logout_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        card_view:cardBackgroundColor="@color/colorFontDisable"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="0dp"
        android:layout_marginTop="12dp"
        android:focusable="true"
        android:clickable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/f_accountinfo_leave_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        card_view:cardBackgroundColor="@color/colorFontDisable"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="0dp"
        android:layout_marginTop="12dp"
        android:focusable="true"
        android:clickable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/service_leave"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>
</LinearLayout>
