<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:src="@mipmap/ic_launcher"/>-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <TextView
            android:id="@+id/in_bottom_notice_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="#0099FF"
            android:text="@string/noticefragment_title" />
        <TextView
            android:id="@+id/in_bottom_support_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center_vertical"
            android:textColor="#0099FF"
            android:text="@string/supportfragment_title"/>
    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="11sp"
        android:text="@string/include_bottom_first_layout_comment"/>
</LinearLayout>
