<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".first.LoginFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.dangjang.dj2015.first.CustomCheckBox2
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                app:text="자동 로그인"/>
            <TextView
                android:id="@+id/f_login_findpassword_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textColor="#0099FF"
                android:textSize="14sp"
                android:layout_marginRight="12dp"
                android:text="@string/password_find"/>
        </FrameLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/f_login_id_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/searchbox"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:hint="@string/email_address_input"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="11sp"
            android:text="가입하신 이메일 주소를 입력해 주세요"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/f_login_pw_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/searchbox"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:hint="@string/password_input"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="11sp"
            android:text="비밀번호는 영어, 슷자 포함하여 4~20자 이내 입니다"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/f_login_send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:theme="@style/LoginButtonStyle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/login"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/yet_member"/>
            <TextView
                android:id="@+id/f_login_join_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="#0099FF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:text="@string/join"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
